# wickra-copilot

./: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/requirements/: ci-dev.in
.github/scripts/: check-cbindgen.sh
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/src/: lib.rs
bindings/csharp/: README.md
bindings/csharp/WickraCopilot/: Copilot.cs  DllResolver.cs  Native.cs  README.md  WickraCopilot.csproj
bindings/csharp/WickraCopilot.Tests/: CopilotTests.cs  GoldenTests.cs  WickraCopilot.Tests.csproj
bindings/go/: README.md  copilot.go  copilot_test.go  go.mod  golden_test.go
bindings/go/include/: wickra_copilot.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/copilot/: Copilot.java  Native.java
bindings/java/src/test/java/org/wickra/copilot/: CopilotTest.java  GoldenTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  copilot.test.js  golden.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_copilot/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: copilot.R
bindings/r/src/: Makevars  Makevars.win  wickra_copilot.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/copilot-bench/: Cargo.toml
crates/copilot-bench/benches/: copilot.rs
crates/copilot-cli/: Cargo.toml
crates/copilot-cli/src/: args.rs  main.rs  run.rs
crates/copilot-core/: Cargo.toml
crates/copilot-core/src/: builder.rs  config.rs  copilot.rs  derive.rs  error.rs  fact.rs  feed.rs  indicator_set.rs  lib.rs  spec.rs  tool.rs
crates/copilot-core/tests/: conformance.rs  golden.rs  parallel_eq_sequential.rs  proptest_invariants.rs
crates/copilot-llm/: Cargo.toml
crates/copilot-llm/src/: lib.rs  prompt.rs  provider.rs
crates/copilot-llm/tests/: offline.rs
docs/: ARCHITECTURE.md  Cookbook.md  FACTS.md  GROUNDING.md  LLM_ADAPTER.md  TOOL_CALLING.md
examples/: README.md
examples/ask/: Cargo.toml
examples/ask/src/: main.rs
examples/c/: CMakeLists.txt  context.c  context.cpp
examples/csharp/Context/: Context.csproj  Program.cs
examples/go/: context.go  go.mod
examples/java/: Context.java
examples/node/: context.js  package-lock.json  package.json
examples/python/: context.py
examples/r/: context.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: build_context.rs  feed_parse.rs  query.rs  spec_parse.rs
golden/: README.md  feeds.json  generate_feeds.py
golden/expected/: dump.json  funding_flip.json  liquidation.json  pump.json  vol_spike.json
golden/feeds/: BTCUSDT.json  ETHUSDT.json
golden/specs/: dump.json  funding_flip.json  liquidation.json  pump.json  vol_spike.json
