[package]
name = "wickra-copilot-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The core without the `parallel` feature: the fuzz build is sequential and lean,
# and never pulls rayon or the native exchange facade.
copilot-core = { path = "../crates/copilot-core", default-features = false }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "spec_parse"
path = "fuzz_targets/spec_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "feed_parse"
path = "fuzz_targets/feed_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "build_context"
path = "fuzz_targets/build_context.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query"
path = "fuzz_targets/query.rs"
test = false
doc = false
bench = false
