[package]
name = "wickra-copilot-example"
description = "A runnable Rust example for the Wickra Copilot core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "context"
path = "src/main.rs"

[dependencies]
copilot-core = { workspace = true }
serde_json = { workspace = true }
